--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "docx": "^5.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "googleapis": "^39.2.0",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.3"
   }
 }
